--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,5 @@
-<%= @users.each { |user| puts user['first_name'] } %>
+<h1>
+  <% @users.each do |user| %>
+    <li><%= user.user_name %></li>
+  <% end %>
+</h1>
