user can add a new room

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,3 +3,6 @@
     <li><%= user.user_name %></li>
   <% end %>
 </h1>
+<form action="/create_listing" method="GET">
+  <input type="submit" name="add_listing" value="Add new listing!">
+</form>
