Refined sign in method and tests

--- a/views/explore_rooms.erb
+++ b/views/explore_rooms.erb
@@ -6,7 +6,7 @@
     </head>
     <body>
       <section id=‘box’>
-        <h1>Welcome back <%="#{@signed_in_user.first_name}" %></h1>
+        <h1>Welcome back <%="#{@signed_in_user.first_name}" %>!</h1>
         <h1>Logged in as <%="#{@signed_in_user.user_name}" %></h1>
     </section>
   </body>
