--- a/views/new_listing.erb
+++ b/views/new_listing.erb
@@ -1,6 +1,6 @@
 <h1>Add a new listing!</h1>
 <div>
-<form action="/listings" method="POST">
+<form action="/edit_listing" method="POST">
   Name of listing: <input type="text" name="title" required><br>
   Description: <input type="text" name="description" required><br>
   Price per day (£): <input type="text" name="price_per_night" required><br>
