--- a/views/register.erb
+++ b/views/register.erb
@@ -4,6 +4,7 @@
       <title>MakersBnB</title>
       <link rel=“stylesheet” type=“text/css” href=“style.css”>
     </head>
+    <header><p style="text-align:right;"><a href="/login">Log In</a><p></header>
     <body>
       <section id=‘box’>
         <h1>Thanks for signing up <%="#{@new_user.first_name}" %>! Please sign in with your new username and password here:</h1>
@@ -12,7 +13,6 @@
         Password: <input type="password" name="password"><br>
         <input type="submit" value="Log In"><br>
         </form>
-        Not registered? Sign up <a href="/">here</a>!
     </section>
   </body>
 </html>
