--- a/views/room.erb
+++ b/views/room.erb
@@ -11,14 +11,9 @@
     <p></header>
     <body>
       <section id=‘box’>
-      <h1>Your listings</h1>
+      <h1>You are viewing <%="#{@room}"%></h1>
       <div>
-      <%= "#{@rooms.last.title} added!" %>
-      </div>
-      <div>
-        <% @rooms.each do |room| %>
-          <li><%= room.title %></li>
-        <% end %>
+  
       </div>
     </section>
   </body>
