Further tidied up HTML and added missing routes for requests

--- a/views/explore_rooms.erb
+++ b/views/explore_rooms.erb
@@ -10,6 +10,7 @@
     <a href="/logout">Log Out</a>
     <p></header>
     <body>
+      <center>
       <section id=‘box’>
         <h1>Welcome back <%="#{@signed_in_user.first_name}" %>!</h1>
       </section>
@@ -31,5 +32,6 @@
         <% end %>
         </ul> 
       </section>
+      </center>
   </body>
 </html>
