--- a/views/invalid_login.erb
+++ b/views/invalid_login.erb
@@ -6,6 +6,7 @@
     </head>
     <body>
       <section id=‘box’>
+      <center>
         <h1>Invalid username or password, please try again</h1>
         <form action="/login" method="post"><br>
         Username:    <input type="text" name="user_name"><br>
@@ -13,6 +14,7 @@
         <input type="submit" value="Log In"><br>
         </form>
         Not registered? Sign up <a href="/">here</a>!
+        </center>
     </section>
   </body>
 </html>
