--- a/views/requests.erb
+++ b/views/requests.erb
@@ -12,14 +12,10 @@
     <body>
       <section id=‘box’>
       <center>
-      <h1>Add a new listing!</h1>
+      <h1>Requests you have made:</h1>
+      <h1>Requests you have received:</h1>
       <div>
-      <form action="/listings" method="POST">
-        Name of listing: <input type="text" name="title"><br>
-        Description: <input type="text" name="description"><br>
-        Price per day (£): <input type="text" name="price_per_night"><br>
-        <input type="submit" name="submit", value="Add listing!">
-      </form>
+  
       </div>
       </center>
     </section>
