--- a/views/room.erb
+++ b/views/room.erb
@@ -11,10 +11,14 @@
     <p></header>
     <body>
       <section id=‘box’>
+      <center>
       <h1>You are viewing <%="#{@room}"%></h1>
       <div>
-  
+      <form action="/make_request" method="post">
+      <input type="submit" name="make_request" value="Make Request!">
+      </form>
       </div>
+      </center>
     </section>
   </body>
 </html>
