--- a/views/room.erb
+++ b/views/room.erb
@@ -11,15 +11,14 @@
     <p></header>
     <body>
       <section id=‘box’>
-      <h1>Your listings</h1>
+      <center>
+      <h1>You are viewing <%="#{@room}"%></h1>
       <div>
-      <%= "#{@rooms.last.title} added!" %>
+      <form action="/make_request" method="post">
+      <input type="submit" name="make_request" value="Make Request!">
+      </form>
       </div>
-      <div>
-        <% @rooms.each do |room| %>
-          <li><%= room.title %></li>
-        <% end %>
-      </div>
+      </center>
     </section>
   </body>
 </html>
