pretending to be rubocop

--- a/views/login.erb
+++ b/views/login.erb
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <title>MakersBnB</title>
-      <link rel=“stylesheet” type=“text/css” href=“style.css”>
-    </head>
-    <body>
-      <section id=‘box’>
-        <h1>Please log in</h1>
-        <form action="/login" method="post"><br>
+<html>
+  <head>
+    <title>MakersBnB</title>
+    <link rel=“stylesheet” type=“text/css” href=“style.css”>
+  </head>
+  <body>
+    <section id='box'>
+      <h1>Please log in</h1>
+      <form action="/login" method="post"><br>
         Username:    <input type="text" name="user_name"><br>
         Password: <input type="password" name="password"><br>
         <input type="submit" value="Log In"><br>
-        </form>
-        Not registered? Sign up <a href="/">here</a>!
+      </form>
+      Not registered? Sign up <a href="/">here</a>!
     </section>
   </body>
 </html>
