--- a/views/index.erb
+++ b/views/index.erb
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <title>MakersBnB</title>
-      <link rel=“stylesheet” type=“text/css” href=“style.css”>
-    </head>
+<html>
+  <head>
+    <title>MakersBnB</title>
+    <link rel=“stylesheet” type=“text/css” href=“style.css”>
+  </head>
     <header><p style="text-align:right;"><a href="/login">Log In</a></p></header>
-    <body>
-      <section id=‘box’>
-      <center>
-        <h1>Welcome to Makersbnb!</h1>
-        <h1>Register today!<br>Please provide us with some simple details:</h1>
-        <form action="/register" method="post"><br>
+  <body>
+    <section id='box'>
+      <h1>Welcome to Makersbnb!</h1>
+      <h1>Register today!<br>Please provide us with some simple details:</h1>
+      <form action="/register" method="post"><br>
         First Name:<br>    <input type="text" name="first_name"><br>
         Last Name:<br>    <input type="text" name="last_name"><br>
         Email:<br>    <input type="text" name="email"><br>
         Username:<br>    <input type="text" name="user_name"><br>
         Password:<br> <input type="password" name="password"><br>
-        <input type="submit" value="Sign Up!"><br>
-        </form>
-        <br>
-        Already registered? <br>
-        <form action='/login' method='get'>
+      <input type="submit" value="Sign Up!"><br>
+      </form>
+      Already registered? <br>
+      <form action='/login' method='get'>
         <input type="submit" id="log_in" value="Log In">
-        </form>
-        </center>
+      </form>
     </section>
   </body>
 </html>
