--- a/views/listings.erb
+++ b/views/listings.erb
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <title>MakersBnB</title>
-      <link rel=“stylesheet” type=“text/css” href=“style.css”>
-    </head>
+<html>
+  <head>
+    <title>MakersBnB</title>
+    <link rel=“stylesheet” type=“text/css” href=“style.css”>
+  </head>
     <header><p style="text-align:right;">Logged in as <%="#{@signed_in_user.user_name}" %>&nbsp;
     <a href="/explore_rooms">Explore Rooms</a>&nbsp;
     <a href="/requests">Requests</a>&nbsp;
     <a href="/logout">Log Out</a>
     <p></header>
-    <body>
-      <section id=‘box’>
+  <body>
+    <section id='box'>
       <h1>Your listings</h1>
       <div>
       <%= "#{@rooms.last.title} added!" %>
