--- a/views/register.erb
+++ b/views/register.erb
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <title>MakersBnB</title>
-      <link rel=“stylesheet” type=“text/css” href=“style.css”>
-    </head>
+<html>
+  <head>
+    <title>MakersBnB</title>
+    <link rel=“stylesheet” type=“text/css” href=“style.css”>
+  </head>
     <header><p style="text-align:right;"><a href="/login">Log In</a><p></header>
-    <body>
-      <section id=‘box’>
-      <center>
-        <h1>Thanks for signing up <%="#{@new_user.first_name}" %>! Please sign in with your new username and password here:</h1>
-        <form action="/login" method="post"><br>
+  <body>
+    <section id='box'>
+      <h1>Thanks for signing up <%="#{@new_user.first_name}" %>!
+       Please sign in with your new username and password here:</h1>
+      <form action="/login" method="post"><br>
         Username:    <input type="text" name="user_name"><br>
         Password: <input type="password" name="password"><br>
         <input type="submit" value="Log In"><br>
-        </form>
-        </center>
+      </form>
     </section>
   </body>
 </html>
