--- a/views/requests.erb
+++ b/views/requests.erb
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <title>MakersBnB</title>
-      <link rel=“stylesheet” type=“text/css” href=“style.css”>
-    </head>
+<html>
+  <head>
+    <title>MakersBnB</title>
+    <link rel=“stylesheet” type=“text/css” href=“style.css”>
+  </head>
     <header><p style="text-align:right;">Logged in as <%="#{@signed_in_user.user_name}" %>&nbsp;
     <a href="/explore_rooms">Explore Rooms</a>&nbsp;
     <a href="/requests">Requests</a>&nbsp;
     <a href="/logout">Log Out</a>
     <p></header>
-    <body>
-      <section id=‘box’>
-      <center>
+  <body>
+    <section id='box'>
       <h1>Requests you have made:</h1>
       <h1>Requests you have received:</h1>
       <div>
-  
       </div>
-      </center>
     </section>
   </body>
 </html>
