--- a/views/new_listing.erb
+++ b/views/new_listing.erb
@@ -18,6 +18,16 @@
         Name of listing: <input type="text" name="title"><br>
         Description: <input type="text" name="description"><br>
         Price per day (£): <input type="text" name="price_per_night"><br>
+      <section class='listing_range'>
+        Select the maximum date range when your room is available.<br>
+        If you wish to block out unavailable dates during this time you can do so on the next page.<br>
+        Start of listing: <input type='date' name='availability_range_min' 
+                             value="<%= Date.today.strftime("%Y-%m-%d") %>"
+                             min="<%= Date.today.strftime("%Y-%m-%d")%>" required><br>
+        End of listing: <input type='date' name='availability_range_max' 
+                             value="<%= Date.today.strftime("%Y-%m-%d") %>"
+                             min="<%= Date.today.strftime("%Y-%m-%d")%>" required><br>
+      </section>
         <input type="submit" name="submit", value="Add listing!">
       </form>
       </div>
