--- a/views/requests.erb
+++ b/views/requests.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>MakersBnB</title>
-    <link rel=“stylesheet” type=“text/css” href=“style.css”>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
     <header><p style="text-align:right;">Logged in as <%="#{@signed_in_user.user_name}" %>&nbsp;
     <a href="/explore_rooms">Explore Rooms</a>&nbsp;
@@ -10,11 +10,10 @@
     <a href="/logout">Log Out</a>
     <p></header>
   <body>
+    <img src='images/makers_logo.jpg' alt='Fluffy Kitten' id='logo'>
     <section id='box'>
-      <h1>Requests you have made:</h1>
-      <h1>Requests you have received:</h1>
-      <div>
-      </div>
+      <h2>Requests you have made:</h2>
+      <h2>Requests you have received:</h2>
     </section>
   </body>
 </html>
