--- a/views/new_listing.erb
+++ b/views/new_listing.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>MakersBnB</title>
-    <link rel=“stylesheet” type=“text/css” href=“style.css”>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
     <header><p style="text-align:right;">Logged in as <%="#{@signed_in_user.user_name}" %>&nbsp;
     <a href="/explore_rooms">Explore Rooms</a>&nbsp;
@@ -10,13 +10,14 @@
     <a href="/logout">Log Out</a>
     <p></header>
   <body>
+    <img src='images/makers_logo.jpg' alt='Fluffy Kitten' id='logo'>
     <section id='box'>
-      <h1>Add a new listing!</h1>
+      <br><h2>Add a new listing!</h2>
       <form action="/listings" method="POST">
         Name of listing: <input type="text" name="title"><br>
         Description: <input type="text" name="description"><br>
-        Price per day (£): <input type="text" name="price_per_night"><br>
-        <input type="submit" name="submit", value="Add listing!">
+        Price per day (£): <input type="number" name="price_per_night"><br>
+        <input type="submit" name="submit" value="Add listing!">
       </form>
     </section>
   </body>
