changing alt value of images

--- a/views/explore_rooms.erb
+++ b/views/explore_rooms.erb
@@ -10,7 +10,7 @@
     <a href="/logout">Log Out</a>
     <p></header>
   <body>
-    <img src='images/makers_logo.jpg' alt='Fluffy Kitten' id='logo'>
+    <img src='images/makers_logo.jpg' id='logo'>
     <section id='box'>
       <section id='explore_rooms'>
         <br><h2>Welcome back <%="#{@signed_in_user.first_name}" %>!</h2>
