--- a/views/index.erb
+++ b/views/index.erb
@@ -6,7 +6,7 @@
   </head>
     <header><p style="text-align:right;"><a href="/login">Log In</a></p></header>
   <body>
-    <img src='images/makers_logo.jpg' alt='Fluffy Kitten' id='logo'>
+    <img src='images/makers_logo.jpg' id='logo'>
     <section id='box'>
       <br><h1>Welcome to Makersbnb!</h1>
       <h3>Register today!<br>Please provide us with some personal details:</h3>
