--- a/views/requests.erb
+++ b/views/requests.erb
@@ -10,7 +10,7 @@
     <a href="/logout">Log Out</a>
     <p></header>
   <body>
-    <img src='images/makers_logo.jpg' alt='Fluffy Kitten' id='logo'>
+    <img src='images/makers_logo.jpg' id='logo'>
     <section id='box'>
       <h2>Requests you have made:</h2>
       <h2>Requests you have received:</h2>
