--- a/views/invalid_login.erb
+++ b/views/invalid_login.erb
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <img src='images/makers_logo.jpg' alt='Fluffy Kitten' id='logo'>
+    <img src='images/makers_logo.jpg' id='logo'>
     <section id='box'>
       <section id='login'>
         <br><h2>Invalid username or password, please try again</h2>
