--- a/views/listings.erb
+++ b/views/listings.erb
@@ -10,7 +10,7 @@
     <a href="/logout">Log Out</a>
     <p></header>
   <body>
-    <img src='images/makers_logo.jpg' alt='Fluffy Kitten' id='logo'>
+    <img src='images/makers_logo.jpg' id='logo'>
     <section id='box'>
       <br><h2>Your listings</h2>
       <h2><%= "#{@rooms.last.title} added!" %></h2>
