--- a/views/new_listing.erb
+++ b/views/new_listing.erb
@@ -10,7 +10,7 @@
     <a href="/logout">Log Out</a>
     <p></header>
   <body>
-    <img src='images/makers_logo.jpg' alt='Fluffy Kitten' id='logo'>
+    <img src='images/makers_logo.jpg' id='logo'>
     <section id='box'>
       <br><h2>Add a new listing!</h2>
       <form action="/listings" method="POST">
