--- a/views/room.erb
+++ b/views/room.erb
@@ -10,7 +10,7 @@
     <a href="/logout">Log Out</a>
     <p></header>
   <body>
-    <img src='images/makers_logo.jpg' alt='Fluffy Kitten' id='logo'>
+    <img src='images/makers_logo.jpg' id='logo'>
     <section id='box'>
       <br><h2>You are viewing <%="#{@room}"%></h2>
       <div>
