--- a/views/explore_rooms.erb
+++ b/views/explore_rooms.erb
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <title>MakersBnB</title>
-      <link rel=“stylesheet” type=“text/css” href=“style.css”>
-    </head>
+<html>
+  <head>
+    <title>MakersBnB</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
     <header><p style="text-align:right;">Logged in as <%="#{@signed_in_user.user_name}" %>&nbsp;
     <a href="/explore_rooms">Explore Rooms</a>&nbsp;
     <a href="/requests">Requests</a>&nbsp;
     <a href="/logout">Log Out</a>
     <p></header>
-    <body>
-      <center>
-      <section id=‘box’>
-        <h1>Welcome back <%="#{@signed_in_user.first_name}" %>!</h1>
-      </section>
-      <section>
+  <body>
+    <img src='images/makers_logo.jpg' id='logo'>
+    <section id='box'>
+      <section id='explore_rooms'>
+        <br><h2>Welcome back <%="#{@signed_in_user.first_name}" %>!</h2>
         <form action="/create_listing" method="GET">
           <input type="submit" name="add_listing" value="Add new listing!">
+        </form><br>
+        <hr>
+        <form>
+          <ul><% Room.all.reverse.each do |room| %>
+          <h2><%= room.title %></h2>
+          <%= room.description %><br>
+          Available for £<%= '%.2f' % room.price_per_night %> per night.<br>
+          posted by <% @name = User.find_by(id: "#{room.user_id}") %><%= @name.user_name %>
         </form>
-        <ul>
-        <% Room.all.reverse.each do |room| %>
-        <li><h1><%= room.title %></h1> <br> 
-        <%= room.description %> <br>
-        Available for £<%= room.price_per_night %>0 per night.<br>
-        posted by <% @name = User.find_by(id: "#{room.user_id}") %><%= @name.user_name %>
         <form action="/book" method="post"><br>
-        <input type="hidden" name="room" value="<%=room%>">
-        <input type="submit" value="Book It!"><br>
+          <input type="hidden" name="room" value="<%=room%>">
+          <input type="submit" value="Book It!"><br>
+          <br><hr>
         </form>
-        </li>
-        <% end %>
-        </ul> 
+        <% end %></ul> 
       </section>
-      </center>
+    </section>
   </body>
 </html>
