--- a/views/index.erb
+++ b/views/index.erb
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <title>MakersBnB</title>
-      <link rel=“stylesheet” type=“text/css” href=“style.css”>
-    </head>
+<html>
+  <head>
+    <title>MakersBnB</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
     <header><p style="text-align:right;"><a href="/login">Log In</a></p></header>
-    <body>
-      <section id=‘box’>
-      <center>
-        <h1>Welcome to Makersbnb!</h1>
-        <h1>Register today!<br>Please provide us with some simple details:</h1>
+  <body>
+    <img src='images/makers_logo.jpg' id='logo'>
+    <section id='box'>
+      <br><h1>Welcome to Makersbnb!</h1>
+      <h3>Register today!<br>Please provide us with some personal details:</h3>
+      <section id='register'>
         <form action="/register" method="post"><br>
-        First Name:<br>    <input type="text" name="first_name"><br>
-        Last Name:<br>    <input type="text" name="last_name"><br>
-        Email:<br>    <input type="text" name="email"><br>
-        Username:<br>    <input type="text" name="user_name"><br>
-        Password:<br> <input type="password" name="password"><br>
-        <input type="submit" value="Sign Up!"><br>
+          First Name:<br><input type="text" name="first_name"><br>
+          Last Name:<br><input type="text" name="last_name"><br>
+          Email:<br><input type="email" name="email"><br>
+          Username:<br><input type="text" name="user_name"><br>
+          Password:<br><input type="password" name="password"><br>
+          <input type="submit" value="Sign Up!"><br>
         </form>
-        <br>
-        Already registered? <br>
+        <hr>
+        <h3>Already registered?</h3>
         <form action='/login' method='get'>
-        <input type="submit" id="log_in" value="Log In">
+          <input type="submit" id="log_in" value="Log In">
         </form>
-        </center>
+      </section>
     </section>
   </body>
 </html>
