--- a/views/requests.erb
+++ b/views/requests.erb
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <title>MakersBnB</title>
-      <link rel=“stylesheet” type=“text/css” href=“style.css”>
-    </head>
+<html>
+  <head>
+    <title>MakersBnB</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
     <header><p style="text-align:right;">Logged in as <%="#{@signed_in_user.user_name}" %>&nbsp;
     <a href="/explore_rooms">Explore Rooms</a>&nbsp;
     <a href="/requests">Requests</a>&nbsp;
     <a href="/logout">Log Out</a>
     <p></header>
-    <body>
-      <section id=‘box’>
-      <center>
-      <h1>Requests you have made:</h1>
-      <h1>Requests you have received:</h1>
-      <div>
-  
-      </div>
-      </center>
+  <body>
+    <img src='images/makers_logo.jpg' id='logo'>
+    <section id='box'>
+      <h2>Requests you have made:</h2>
+      <h2>Requests you have received:</h2>
     </section>
   </body>
 </html>
