--- a/views/room.erb
+++ b/views/room.erb
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <title>MakersBnB</title>
-      <link rel=“stylesheet” type=“text/css” href=“style.css”>
-    </head>
+<html>
+  <head>
+    <title>MakersBnB</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
     <header><p style="text-align:right;">Logged in as <%="#{@signed_in_user.user_name}" %>&nbsp;
     <a href="/explore_rooms">Explore Rooms</a>&nbsp;
     <a href="/requests">Requests</a>&nbsp;
     <a href="/logout">Log Out</a>
     <p></header>
-    <body>
-      <section id=‘box’>
-      <center>
-      <h1>You are viewing <%="#{@room}"%></h1>
+  <body>
+    <img src='images/makers_logo.jpg' id='logo'>
+    <section id='box'>
+      <br><h2>You are viewing <%="#{@room}"%></h2>
       <div>
-      <form action="/make_request" method="post">
-      <input type="submit" name="make_request" value="Make Request!">
-      </form>
+        <form action="/make_request" method="post">
+          <input type="submit" name="make_request" value="Make Request!">
+        </form>
       </div>
-      </center>
     </section>
   </body>
 </html>
