--- a/public/style.css
+++ b/public/style.css
@@ -16,13 +16,7 @@ h1 {
   text-align: center;
 }
 
-h2 {
-  text-align: center;
-  font-style: normal;
-  font-weight: 200;
-}
-
-h3 {
+h2, h3 {
   text-align: center;
   font-style: normal;
   font-weight: 200;
