--- a/views/listings.erb
+++ b/views/listings.erb
@@ -17,7 +17,7 @@
       </div>
       <div>
         <% @rooms.each do |room| %>
-          <li><%= room.title %> <%= room.availability %></li></li>
+          <li><%= room.title %> <%= room.availability %></li>
         <% end %>
       </div>
     </section>
