--- a/views/new_listing.erb
+++ b/views/new_listing.erb
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
   <head>
@@ -16,7 +15,7 @@
       <br><h2>Add a new listing!</h2>
       <form action="/edit_listing" method="POST">
         Name of listing: <input type="text" name="title"><br>
-        Description: <input type="text" name="description"><br>
+        Description: <textarea name="description" rows="4" cols="30"></textarea><br>
         Price per day (£): <input type="text" name="price_per_night"><br>
       <section class='listing_range'>
         Select the maximum date range when your room is available.<br>
@@ -28,7 +27,7 @@
                              value="<%= Date.today.strftime("%Y-%m-%d") %>"
                              min="<%= Date.today.strftime("%Y-%m-%d")%>" required><br>
       </section>
-        <input type="submit" name="submit", value="Add listing!">
+        <input type="submit" name="add_listing" value="Add listing!">
       </form>
     </section>
   </body>
