--- a/views/explore_rooms.erb
+++ b/views/explore_rooms.erb
@@ -18,6 +18,19 @@
           <input type="submit" name="add_listing" value="Add new listing!">
         </form><br>
         <hr>
+        <form id='date_filter' action="/explore_filtered_rooms" method="post">
+          <h3>Filter out available rooms by date</h3>
+          Check in: <input type='date' name='check_in_start' 
+                               value="<%= Date.today.strftime("%Y-%m-%d") %>"
+                               min="<%= Date.today.strftime("%Y-%m-%d")%>" required>
+          Check out: <input type='date' name='check_out_end' 
+                               value="<%= Date.today.strftime("%Y-%m-%d") %>"
+                               min="<%= Date.today.strftime("%Y-%m-%d")%>" required><br>
+          <br><input type="submit" name="filter_rooms" value="Filter rooms"><br>
+        <br></form>
+        <hr>
+          
+        <hr>
         <form>
           <ul><% Room.all.reverse.each do |room| %>
           <h2><%= room.title %></h2>
