--- a/views/new_listing.erb
+++ b/views/new_listing.erb
@@ -14,9 +14,10 @@
     <section id='box'>
       <br><h2>Add a new listing!</h2>
       <form action="/edit_listing" method="POST">
-        Name of listing: <input type="text" name="title"><br>
-        Description: <textarea name="description" rows="4" cols="30"></textarea><br>
-        Price per day (£): <input type="text" name="price_per_night"><br>
+        Name of listing: <input type="text" name="title" required><br>
+        Description: <textarea name="description" rows="4" cols="30" required></textarea><br>
+        Price per day (£): <input type="text" name="price_per_night" required><br>
+        Picture of space: <input type="url" id='url_pic' placeholder='Please only enter a URL' name="picture_url"><br>
       <section class='listing_range'>
         Select the maximum date range when your room is available.<br>
         If you wish to block out unavailable dates during this time you can do so on the next page.<br>
