--- a/views/room.erb
+++ b/views/room.erb
@@ -23,12 +23,10 @@
         <hr id=pic_hr>
         <form action="/make_request" method="post">
           <h3>Choose your check-in dates for <%=@room.title%> below and make a booking request!</h3><br>
-          <a>Check-in date: </a><input type='date' name='date_from' 
-            value="<%= Date.today.strftime("%Y-%m-%d") %>"
-            min="<%= Date.today.strftime("%Y-%m-%d")%>" required>
-          <a>Check-out date: </a><input type='date' name='date_to' 
-            value="<%= Date.today.strftime("%Y-%m-%d") %>"
-            min="<%= Date.today.strftime("%Y-%m-%d")%>" required><br>
+          <a>Check-in date: <input type='date' name='date_from' 
+        value="<%= @min_date %>" min="<%= @min_date%>" max="<%= @max_date %>" required><br>
+          <a>Check-out date:  <input type='date' name='date_to' 
+        value="<%= @max_date %>" min="<%= @min_date %>" max="<%= @max_date %>" required><br>
           <br><button type="submit" id='big_button' name="make_request" style>Make Request!</button>
         </form>
       </form>
