--- a/views/explore_rooms.erb
+++ b/views/explore_rooms.erb
@@ -35,7 +35,7 @@
           <hr id='explorer'>
           <form>
           <%# <form action="/book" method="post"> %>
-            <% Room.all.reverse.each do |room| %>
+            <% Room.all.select { |room| room.availability.count > 1 }.reverse.each do |room| %>
             <h2><%= room.title %></h2><br>
             <img src="<%= room.picture_url %>" id='room_url'>
             <h4>Available for £<%= '%.2f' % room.price_per_night %> per night</h4>
@@ -49,6 +49,25 @@
           <% end %>
         </section>
       <form>
+    <section id='box'>
+      <section id='explore_rooms'>
+        <br><h2>Welcome back <%="#{@signed_in_user.first_name}" %>!</h2>
+        <form action="/create_listing" method="GET">
+          <input type="submit" name="add_listing" value="Add new listing!">
+        </form><br>
+        <hr>
+        <form id='date_filter' action="/explore_filtered_rooms" method="post">
+          <h3>Filter out available rooms by date</h3>
+          Check in: <input type='date' name='check_in_start' 
+                               value="<%= Date.today.strftime("%Y-%m-%d") %>"
+                               min="<%= Date.today.strftime("%Y-%m-%d")%>" required>
+          Check out: <input type='date' name='check_out_end' 
+                               value="<%= Date.today.strftime("%Y-%m-%d") %>"
+                               min="<%= Date.today.strftime("%Y-%m-%d")%>" required><br>
+          <br><input type="submit" name="filter_rooms" value="Filter rooms"><br>
+        <br></form>
+        <hr>
+      </section>
     </section>
   </body>
 </html>
